add_library(init_gui STATIC
	gui_init.c
	lua/render.c
	lua/render_obj.c
	lua/render_event.c
	lua/lvgl/lvgl.c
	lua/lvgl/obj.c
	lua/lvgl/lib.c
	lua/activity.c
	lua/sysbar.c
	lua/lua.c
	theme/icon.c
	engine/app.c
	engine/lib.c
	engine/code.c
	engine/event.c
	engine/style.c
	engine/struct.c
	engine/inline.c
	engine/render.c
	engine/object.c
	engine/objects.c
	engine/activity.c
	engine/attribute.c
	engine/attributes/pos.c
	engine/attributes/bool.c
	engine/attributes/size.c
	engine/attributes/input.c
	engine/attributes/image.c
	engine/attributes/layout.c
	engine/attributes/generic.c
	engine/data/attr_hands.c
	engine/data/obj_hands.c
	engine/data/style_props.c
	engine/data/style_set_type.c
	interface/guipm/guipm.c
	interface/guipm/disk_select.c
	interface/guipm/disk_operation.c
	interface/guipm/part_operation.c
	interface/guipm/part_type.c
	interface/guipm/part_resize.c
	interface/guipm/new_partition.c
	interface/guipm/partitions.c
	interface/filemgr/fileopen.c
	interface/filemgr/filemgr.c
	interface/filemgr/fileview.c
	interface/filemgr/filetab.c
	interface/gadget/gadget_view.c
	interface/gadget/base_info.c
	interface/gadget/add_mass.c
	interface/widgets/filepicker.c
	interface/widgets/inputbox.c
	interface/widgets/msgbox.c
	interface/settings/backlight.c
	interface/settings/language.c
	interface/settings/theme.c
	interface/bootmgr/bootmgr.c
	interface/bootmgr/bootitem.c
	interface/bootmgr/bootdata_efi.c
	interface/bootmgr/bootdata_linux.c
	interface/bootmgr/bootdata_memreg.c
	interface/bootmgr/bootdata_uefi_option.c
	interface/conftool/conftool.c
	interface/conftool/confsave.c
	interface/conftool/confload.c
	interface/conftool/create.c
	interface/term/termview.c
	interface/term/console.c
	interface/term/terminal.c
	interface/term/baudrates.c
	interface/term/serialport.c
	interface/term/serialopen.c
	interface/regedit/string.c
	interface/regedit/regedit.c
	interface/regedit/edit_value.c
	interface/core/splash.c
	interface/core/bootmenu.c
	interface/core/sysbar.c
	interface/core/snackbar.c
	interface/core/charger.c
	interface/core/guiapp.c
	interface/core/clipboard.c
	interface/core/ctrl_pad.c
	interface/apps/text_editor.c
	interface/apps/logviewer.c
	interface/apps/benchmark.c
	interface/apps/vibrator.c
	interface/apps/calendar.c
	interface/apps/mount.c
	interface/apps/add_mount.c
	interface/apps/scr_test.c
	interface/apps/picture.c
	interface/apps/abootimg.c
	interface/apps/pointer_test.c
	drivers/drm.c
	drivers/vnc.c
	drivers/dummy.c
	drivers/fbdev.c
	drivers/input.c
	drivers/gtk.c
	drivers/sdl2.c
	drivers/modes.c
	drivers/http.c
	drivers/http_frame.c
	drivers/http_ffmpeg.c
	drivers/http_image.c
	drivers/http_input.c
	drivers/stdin.c
	decoders/freetype.c
	decoders/stb.c
	decoders/svg.c
	decoders/png.c
	decoders/bmp.c
	decoders/jpeg.c
	decoders/image.c
	string/string.c
	drivers.c
	guidrv.c
	activity.c
	activities.c
	color.c
	tools.c
)
