add_library(init_lib STATIC
	array.c
	credential.c
	exit.c
	file.c
	keyval.c
	list.c
	mode.c
	modules.c
	mount.c
	param.c
	pool.c
	proctitle.c
	readable.c
	reboot.c
	replace.c
	signal.c
	stdio.c
	strings.c
	switchroot.c
	base64.c
	language.c
	fdtparser.c
	aboot.c
	random.c
	mime.c
	websocket.c
	http.c
	url.c
	recovery.c
)
