add_library(init_lua STATIC
	data.c
	conf.c
	logger.c
	lua.c
	libs.c
	feature.c
	nanosvg.c
	abootimg.c
	init.c
	url.c
	stb.c
	recovery.c
	filesystem/fs.c
	filesystem/fsh.c
	filesystem/fs_info.c
	filesystem/string.c
	fdisk/fdisk.c
	fdisk/fdisk_ask.c
	fdisk/fdisk_context.c
	fdisk/fdisk_field.c
	fdisk/fdisk_label.c
	fdisk/fdisk_labelitem.c
	fdisk/fdisk_partition.c
	fdisk/fdisk_parttype.c
	fdisk/fdisk_script.c
	fdisk/fdisk_table.c
	fdisk/fdisk_iter.c
)
